[package]
name = "school_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
afire = { version = "3.0.0-alpha.2", features = ["tracing", "extensions"] }
anyhow = "1.0.75"
ctrlc = "3.4.1"
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
parking_lot = "0.12.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
toml = "0.7.6"
ureq = "2.4.0"
url = "2.2.2"
